✨ [Merge] 파티기능 포함된 dev 브랜치 merge (#783)